Make gradle tests run parallely
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,8 @@ sharedLibrary {
     }
 }
 
-test {
+test {   
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1      
     testLogging {
 		events "failed"
 		exceptionFormat "full"
