--- a/.github/workflows/delete-backport-branch.yml
+++ b/.github/workflows/delete-backport-branch.yml
@@ -1,21 +1,24 @@
 ---
-name: Delete merged branch of the backport PRs
-on:
-  pull_request:
-    types:
-      - closed
-
-jobs:
-  delete-branch:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      name: Delete branch
-        uses: actions/github-script@v5
-        with:
-          script: |
-            github.rest.git.deleteRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `heads/${context.payload.pull_request.head.ref}`,
-            })
+  name: Delete merged branch of the backport PRs
+  on:
+    pull_request:
+      types:
+        - closed
+  
+  jobs:
+    delete-branch:
+      runs-on: ubuntu-latest
+      permissions:
+        contents: write
+      if: startsWith(github.event.pull_request.head.ref,'backport/')
+      steps:
+        - name: Delete branch
+          uses: actions/github-script@v5
+          with:
+            script: |
+              github.rest.git.deleteRef({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: `heads/${context.payload.pull_request.head.ref}`,
+              })
+  
