See code coverage
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ configurations.all {
 sourceSets {
     main {
         groovy {
-            srcDirs = ['src/jenkins', 'src/gradlecheck', 'src/utils']
+            srcDirs = ['src/jenkins', 'src/gradlecheck', 'src/utils', 'vars']
         }
     }
 
